# morph

./: .gitignore  Cargo.toml  Justfile  README.md  coverage.json  version.json5
examples/: bad_struct.morph  enum_variants.morph  example.geno  example.morph  struct_variants.geno
scratch/: example.ast
src/: ast.rs  error.rs  geno.pest  lib.rs  main.rs  morph.pest
tests/: geno.rs  morph.rs
