[package]
name = "morph_tool"
version = "0.1.1"
edition = "2024"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]

readme = "README.md"
description = "A cross-language schema compiler that generates type definitions and serialization code from a simple, declarative schema language."
repository = "https://github.com/jlyonsmith/morph.git"

keywords = ["schema", "network", "language"]
categories = ["command-line-utilities", "development-tools"]

license = "Unlicense"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
which = "8.0.0"
rmp-serde = "1.3.1"
duct = "1.1.1"

[[bin]]
name = "morph"
path = "src/bin/morph.rs"

[[bin]]
name = "morph-rust-serde"
path = "src/bin/morph_rust_serde.rs"

[[bin]]
name = "morph-dart-mp"
path = "src/bin/morph_dart_mp.rs"
